# gbaroll

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
gbaroll/: Cargo.toml  Dioxus.toml  build.rs  sw.js
gbaroll-replay/: Cargo.toml
gbaroll-replay/src/: lib.rs
gbaroll-signaling/: Cargo.toml  build.rs
gbaroll-signaling-server/: Cargo.toml
gbaroll-signaling-server/src/: lib.rs  main.rs
gbaroll-signaling-worker/: README.md  buf.gen.yaml  package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
gbaroll-signaling-worker/scripts/: smoke.ts
gbaroll-signaling-worker/src/: index.ts  protocol.ts  turn.ts
gbaroll-signaling-worker/test/: codec.test.ts
gbaroll-signaling/proto/: signaling.proto
gbaroll-signaling/src/: lib.rs
gbaroll-signaling/tests/: fixtures.rs
gbaroll-worklet/: Cargo.toml
gbaroll/assets/: audio-worklet.js  manifest.webmanifest  style.css
gbaroll/src/: config.rs  library.rs  main.rs  nointro.rs  smoke_test.rs
gbaroll/src/net/: lobby.rs  mesh.rs  mod.rs  protocol.rs  webrtc.rs  ws.rs
gbaroll/src/platform/: input.rs  mod.rs  sdl_init.rs
gbaroll/src/platform/audio/: mod.rs  replay.rs  sdl.rs  web.rs
gbaroll/src/platform/video/: framebuffer.rs  mod.rs
gbaroll/src/platform/video/effects/: mod.rs
gbaroll/src/runtime/: mod.rs
gbaroll/src/session/: local.rs  mod.rs  netplay.rs
gbaroll/src/session/playback/: engine.rs  mod.rs
gbaroll/src/storage/: mod.rs
gbaroll/src/ui/: cable.rs  icons.rs  lobby.rs  mod.rs  overlay.rs  play.rs  replays.rs  scrubber.rs  session_view.rs  settings.rs  shell.rs  telemetry.rs  touch.rs
gbaroll/src/web/: mod.rs
