[workspace]
resolver = "2"
members = [
    "gbaroll",
    "gbaroll-replay",
    "gbaroll-signaling",
    "gbaroll-signaling-server",
]

# Shared versions for deps used by 2+ member crates.
[workspace.dependencies]
anyhow = "1"
crc32fast = "1"
futures = "0.3"
log = "0.4"
mgba = { git = "https://github.com/tangobattle/mgba-rs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
thiserror = "1"
tokio = "1"
tokio-tungstenite = "0.23"
env_logger = "0.11"

# The engine crates live in the tango workspace next door; gbaroll is a
# sibling checkout, not a member, so they come in by path.
getgud = { path = "../tango/getgud" }
mgba-siolink = { path = "../tango/mgba-siolink" }
rennet = { path = "../tango/rennet" }

[profile.release]
# The emulator is CPU-bound; keep iterative release builds cheap (Cargo
# defaults) — this is the profile for day-to-day `cargo run --release`.

[profile.release-dist]
inherits = "release"
lto = "thin"
codegen-units = 1
debug = 1
