[workspace]
resolver = "2"
members = [
    "gbaroll",
    "gbaroll-replay",
    "gbaroll-signaling",
]
# gbaroll is wasm32-only (built via `dx`); plain `cargo build`/`test` at
# the root covers the native pieces.
default-members = [
    "gbaroll-replay",
    "gbaroll-signaling",
]

# Shared versions for deps used by 2+ member crates.
[workspace.dependencies]
anyhow = "1"
crc32fast = "1"
futures = "0.3"
log = "0.4"
mgba = { git = "https://github.com/tangobattle/mgba-rs" }
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
thiserror = "1"
tokio = "1"
tokio-tungstenite = "0.23"
env_logger = "0.11"

# The engine crates live in their own repos (pulled out of the tango
# workspace), so no tango checkout is needed to build gbaroll.
getgud = { git = "https://github.com/tangobattle/getgud" }
mgba-siolink = { git = "https://github.com/tangobattle/mgba-siolink" }
rennet = { git = "https://github.com/tangobattle/rennet" }

[profile.release]
# The emulator is CPU-bound; keep iterative release builds cheap (Cargo
# defaults) — this is the profile for day-to-day `cargo run --release`.

[profile.release-dist]
inherits = "release"
lto = "thin"
codegen-units = 1
debug = 1
