[package]
name = "gbaroll"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
publish = false

# wasm32-only (see src/main.rs); build with `dx serve` / `dx build`.
# Deps grow back milestone by milestone as the undeclared portable
# modules (session/, platform/, net/) come back into the tree.
[dependencies]
# Engine (lives in the tango workspace next door).
mgba.workspace = true
mgba-siolink.workspace = true

crc32fast.workspace = true
log.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
bytemuck = "1"

dioxus = { version = "0.7", features = ["web"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "KeyboardEvent",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlTexture",
    "WebGlUniformLocation",
    "Performance",
    "Navigator",
    "Gamepad",
    "GamepadButton",
    "GamepadMappingType",
    "AudioContext",
    "AudioContextOptions",
    "AudioContextState",
    "BaseAudioContext",
    "AudioWorklet",
    "AudioWorkletNode",
    "AudioNode",
    "AudioDestinationNode",
    "MessagePort",
    "MessageEvent",
] }
console_error_panic_hook = "0.1"
console_log = "1"
